# ChangeLog for kde-base/kmail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kmail/ChangeLog,v 1.238 2011/02/13 19:57:27 scarabeus Exp $

  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kmail-4.4.6.ebuild,
  -kmail-4.4.7.ebuild, -kmail-4.4.8.ebuild:
  Drop older KDEPIM releases

  28 Jan 2011; Thomas Kahle <tomka@gentoo.org> kmail-4.4.9.ebuild:
  x86 stable per bug 351345

  28 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org> kmail-4.4.10.ebuild:
  Fix path of the patch

*kmail-4.4.10 (28 Jan 2011)

  28 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org> +kmail-4.4.10.ebuild:
  Version bump KDEPIM 4.4.10

  26 Jan 2011; Markos Chandras <hwoarang@gentoo.org> kmail-4.4.9.ebuild:
  Stable on amd64 wrt bug #351345

  25 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  files/kmail-4.4.9-nodbus.patch:
  Removed even more dysfunctional tests.

  23 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org> kmail-4.4.9.ebuild,
  +files/kmail-4.4.9-nodbus.patch:
  Disable a test that relies on a dbus session

  22 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org> kmail-4.4.8.ebuild,
  kmail-4.4.9.ebuild:
  Fixed tests by adding VIRTUALX support, bug 351789

  12 Jan 2011; Markos Chandras <hwoarang@gentoo.org> kmail-4.4.8.ebuild:
  Stable on amd64 wrt bug #351345

*kmail-4.4.9 (29 Dec 2010)

  29 Dec 2010; Theo Chatzimichos <tampakrap@gentoo.org> +kmail-4.4.9.ebuild:
  Version bump KDEPIM 4.4.9

*kmail-4.4.8 (06 Dec 2010)

  06 Dec 2010; Theo Chatzimichos <tampakrap@gentoo.org> +kmail-4.4.8.ebuild:
  Version bump KDE SC 4.4.8

  06 Nov 2010; Christian Faulhammer <fauli@gentoo.org> kmail-4.4.7.ebuild:
  stable x86, bug 343969

  03 Nov 2010; Markos Chandras <hwoarang@gentoo.org> kmail-4.4.7.ebuild:
  Stable on amd64 wrt bug #343969

*kmail-4.4.7 (24 Oct 2010)

  24 Oct 2010; Theo Chatzimichos <tampakrap@gentoo.org> +kmail-4.4.7.ebuild:
  Version bump KDEPIM 4.4.7

*kmail-4.4.6 (11 Sep 2010)
