@@ -1,11 +1,10 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmail/kmail-4.4.10.ebuild,v 1.3 2011/01/28 07:32:55 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmail/kmail-4.4.10.ebuild,v 1.4 2011/03/10 08:04:05 angelos Exp $
 
 EAPI="3"
 
 KMNAME="kdepim"
-VIRTUALX_REQUIRED=tests
 inherit kde4-meta
 
 DESCRIPTION="KMail is the email component of Kontact, the integrated personal information manager of KDE."
