@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kmail
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmail/ChangeLog,v 1.238 2011/02/13 19:57:27 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmail/ChangeLog,v 1.239 2011/03/10 08:04:05 angelos Exp $
+
+  10 Mar 2011; <angelos@gentoo.org> kmail-4.4.9.ebuild, kmail-4.4.10.ebuild:
+  QA: Removed unneeded VIRTUALX_REQUIRED
 
   13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kmail-4.4.6.ebuild,
   -kmail-4.4.7.ebuild, -kmail-4.4.8.ebuild:
